--- a/apps/ledger-live-desktop/static/i18n/fr/app.json
+++ b/apps/ledger-live-desktop/static/i18n/fr/app.json
@@ -218,7 +218,8 @@
     "swap" : "Swap",
     "lend" : "Prêter",
     "catalog" : "Discover",
-    "market" : "Marché"
+    "market" : "Marché",
+    "protect" : "Protect"
   },
   "stars" : {
     "placeholder" : "Mettez une étoile sur un compte pour l’afficher ici.",
@@ -828,6 +829,10 @@
         "near" : {
           "title" : "Bon à savoir",
           "description" : "Le taux de commission de Ledger est inférieur à celui de votre validateur. Ce processus peut prendre jusqu’à 65 heures."
+        },
+        "elrond" : {
+          "title" : "Bon à savoir",
+          "description" : "Le taux de commission de Ledger est inférieur à celui de votre validateur. Ce processus peut prendre jusqu’à 10 jours."
         }
       },
       "delegation" : {
@@ -849,6 +854,9 @@
         },
         "near" : {
           "description" : "Stakez vos NEAR avec le validateur Ledger by Figment. Vous restez propriétaire de vos cryptos, tout en bénéficiant de la sécurité inégalée de Ledger."
+        },
+        "elrond" : {
+          "description" : "Stakez vos EGLD avec le validateur Ledger by Figment. Vous restez propriétaire de vos cryptos, tout en bénéficiant de la sécurité inégalée de Ledger."
         }
       }
     }
@@ -2261,6 +2269,13 @@
     },
     "switchButton" : "Basculer en {{language}}",
     "no" : "Non, merci"
+  },
+  "deviceRename" : {
+    "title" : "Renommer mon {{ productName }}",
+    "chooseName" : "Choisissez un nom",
+    "placeholder" : "Stax de Tony",
+    "remainingCharacters" : "{{ remainingCharacters }} caractères restants",
+    "renamed" : "Le nouveau nom de votre {{ productName }} est \n« {{ name }} » "
   },
   "deviceLocalization" : {
     "language" : "Langue",
@@ -3786,6 +3801,9 @@
       "catalogRampServerDesc" : "Choisissez entre plusieurs prestataires de trading.",
       "enablePlatformDevTools" : "Activer les Outils de développement Platform",
       "enablePlatformDevToolsDesc" : "Autorisez la fenêtre Outils de développement Platform.",
+      "customLockScreen" : "Composants de l’écran de verrouillage personnalisé",
+      "customLockScreenDesc" : "Débuggez les composants graphiques de l’écran de verrouillage personnalisé.",
+      "customLockScreenCTA" : "Lancer",
       "featureFlagsTitle" : "Indicateurs de fonctionnalités (feature flags) définis et utilisés dans Ledger Live",
       "featureFlagsDesc" : "Les valeurs remplacées seront réinitialisées lorsque l’application sera relancée. Seules les chaînes JSON valides sont acceptées.",
       "featureFlagsEdit" : "Modifier",
@@ -5668,6 +5686,7 @@
   },
   "customImage" : {
     "title" : "Écran de verrouillage personnalisé",
+    "managerCTA" : "Écran de verrouillage",
     "steps" : {
       "choose" : {
         "stepLabel" : "Choisissez une image",
@@ -5737,5 +5756,11 @@
       "subtitle" : "Déverrouillez votre {{productName}} et relancez l’installation.",
       "installCTA" : "Relancer l’installation"
     }
+  },
+  "discoverProtect" : {
+    "title" : "La sauvegarde de votre phrase de récupération secrète",
+    "description" : "Pour retrouver l’accès à votre wallet à tout moment et en tout lieu.",
+    "cta" : "Découvrir les avantages",
+    "downloadLLM" : "Abonnez-vous à Ledger Recover via l’application Ledger Live pour le mobile."
   }
 }
