--- a/apps/ledger-live-mobile/src/locales/ko/common.json
+++ b/apps/ledger-live-mobile/src/locales/ko/common.json
@@ -88,7 +88,11 @@
     "getSupport" : "지원 받기",
     "comingSoon" : "곧 출시 예정",
     "restart" : "재시작",
-    "loadMore" : "더 보기"
+    "loadMore" : "더 보기",
+    "patterns" : {
+      "id" : "ID {{ value }}",
+      "times" : "x{{ value }}"
+    }
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -828,7 +832,9 @@
     "required" : "죄송하지만 블루투스가 비활성 상태인 것 같습니다",
     "locationRequiredTitle" : "블루투스 LE 사용을 위해 위치 정보가 필요합니다.",
     "locationRequiredMessage" : "안드로이드에서 블루투스 LE 장치를 열거하려면 위치를 허용해야 합니다.",
-    "checkEnabled" : "휴대폰 설정에서 블루투스를 활성화해주세요."
+    "checkEnabled" : "휴대폰 설정에서 블루투스를 활성화해주세요.",
+    "tryEnablingAgain" : "블루투스를 다시 활성화해보세요",
+    "openSettings" : "블루투스 설정 열기"
   },
   "webview" : {
     "noConnectionError" : {
@@ -838,12 +844,10 @@
   },
   "location" : {
     "titleServiceRequired" : "위치 서비스가 필요합니다",
-    "titlePermissionRequired" : "위치 정보 액세스 권한이 필요합니다",
-    "titlePermissionRequiredPrecise" : "정확한 위치 정보 액세스 권한이 필요합니다",
     "descriptionServiceRequired" : "블루투스로 귀하의 장치를 Ledger Live와 페어링 하려면 위치 서비스가 필요합니다.",
-    "descriptionPermissionRequired" : "블루투스로 귀하의 장치를 Ledger Live와 페어링 하려면 위치 정보 액세스 권한이 필요합니다.",
-    "descriptionPermissionRequiredPrecise" : "블루투스로 귀하의 장치를 Ledger Live와 페어링 하려면 정확한 위치 정보 액세스 권한이 필요합니다.",
     "open" : "위치 설정 열기",
+    "openSettings" : "위치 설정 열기",
+    "tryEnablingAgain" : "위치를 다시 활성화해보세요",
     "noInfos" : "Ledger는 사용자의 위치 정보를 사용하지 않습니다."
   },
   "permissions" : {
@@ -856,6 +860,12 @@
       "modalButtonLabelBase" : "승인",
       "modalButtonLabelSettingsVariant" : "설정으로 이동",
       "dontPair" : "페어링 금지"
+    },
+    "location" : {
+      "titlePermissionRequired" : "위치 정보 액세스 권한이 필요합니다",
+      "titlePermissionRequiredPrecise" : "정확한 위치 정보 액세스 권한이 필요합니다",
+      "descriptionPermissionRequired" : "블루투스로 귀하의 장치를 Ledger Live와 페어링 하려면 위치 정보 액세스 권한이 필요합니다.",
+      "descriptionPermissionRequiredPrecise" : "블루투스로 귀하의 장치를 Ledger Live와 페어링 하려면 정확한 위치 정보 액세스 권한이 필요합니다."
     },
     "camera" : {
       "title" : "카메라 허용",
@@ -1279,8 +1289,13 @@
       },
       "recovery" : "이미 복구 문구가 있나요?",
       "protect" : {
-        "label" : "~60분",
-        "subTitle" : "Protect를 통해 복구하세요"
+        "subTitle" : "Ledger Recover를 통한 복구",
+        "drawer" : {
+          "title" : "Ledger Nano X 사용",
+          "desc" : "Ledger Recover 소프트 런칭은 Ledger Nano X 전용입니다.",
+          "buyNanoX" : "Ledger Nano X 구매하기",
+          "discoverBenefits" : "장점 살펴보기"
+        }
       }
     },
     "stepNewDevice" : {
@@ -1507,25 +1522,20 @@
     "stepProtect" : {
       "bullets" : {
         "0" : {
-          "title" : "둘러보기 ",
-          "label" : "스크린 상의 지시를 읽어보며 다양한 장치 활용 방법을 알아보세요."
+          "title" : "\"복구\"를 선택하세요",
+          "label" : "두 버튼을 동시에 눌러 선택하세요."
         },
         "1" : {
-          "title" : "\"복구\"를 선택하세요",
-          "label" : "두 버튼을 동시에 눌러 선택한 항목을 승인해주세요."
-        },
-        "2" : {
-          "title" : "\"Protect로 복구\" 모드를 선택합니다",
-          "label" : "두 버튼을 동시에 눌러 선택한 항목을 승인해주세요."
+          "title" : "\"Ledger Recover로 복구\"를 선택합니다.",
+          "label" : "두 버튼을 동시에 눌러 선택하세요."
         }
       },
       "nextStep" : "계속",
       "extraInfo" : {
-        "tooltip" : "내 Ledger에 표시되지 않음",
-        "title" : "내 Ledger에 Protect를 통한 복구가 표시되지 않는 이유는 무엇인가요?",
-        "desc1" : "장치가 Protect와 호환되지 않기 때문일 가능성이 가장 높습니다. 걱정하지 마세요. 해결 방법을 안내해 드리겠습니다.",
-        "desc2" : "당사로 연락하여 \"내 Ledger에 Protect를 통한 복구가 표시되지 않음\"을 선택하시면 지원해 드리겠습니다.",
-        "cta" : "수동으로 진행",
+        "tooltip" : "'Ledger Recover로 복구' 메뉴가 보이지 않습니다.",
+        "title" : "Ledger Nano X의 OS를 업데이트해야 합니다.",
+        "desc" : "OS를 업데이트하거나 Ledger 지원 부서로 문의하세요.",
+        "cta" : "업데이트 방법 알아보기",
         "supportLink" : "Ledger 지원 부서에 문의해주세요"
       }
     },
@@ -1667,8 +1677,9 @@
         }
       },
       "protectConnectionInformationModal" : {
-        "title" : "Ledger를 연결할 수 없는 이유가 무엇인가요?",
-        "description" : "Ledger에서 블루투스를 활성화한 후에 Ledger Live 모바일과 연결 문제가 발생한 경우 아래의 \"해결 방법 알아보기\" 버튼을 눌러서 안내에 따라 문제를 해결할 수 있습니다."
+        "title" : "Ledger Nano X 연결",
+        "description" : "LEDGER 장치가 휴대폰에 가까이 있는지 확인하고 다시 연결을 시도하세요. <LinkBluethooth>블루투스® 연결 문제 \n</LinkBluethooth>.\n블루투스®가 작동 중인 경우, LEDGER의 OS를 업데이트가 필요할 수 있습니다. OS를 업데이트하거나 Ledger 지원 부서에 도움을 요청하세요. ",
+        "learnHowToUpdate" : "업데이트 방법 알아보기"
       }
     },
     "stepImportAccounts" : {
@@ -1892,7 +1903,9 @@
     "seedStep" : {
       "title" : "비밀 복구 문구",
       "doneTitle" : "비밀 복구 문구 확인됨",
-      "description" : "복구 문구는 24개의 단어로 이루어진 시크릿 리스트로, 개인 키 백업에 사용됩니다. {{productName}} 장치가 고유한 복구 문구를 생성합니다. Ledger는 복구 문구의 복사본을 보관하지 않습니다."
+      "description" : "복구 문구는 24개의 단어로 이루어진 시크릿 리스트로, 개인 키 백업에 사용됩니다. {{productName}} 장치가 고유한 복구 문구를 생성합니다. Ledger는 복구 문구의 복사본을 보관하지 않습니다.",
+      "selection" : "가장 적합한 설정 옵션을 선택하세요.",
+      "recovery" : "반드시 Ledger 장치에서 생성되는 비밀 복구 문구를 사용하여 자산에 대한 확실한 보안을 보장받으세요.\n\n복구 문구가 없으신가요? {{productName}}을 사용해 새로운 복구 문구를 생성하세요."
     },
     "softwareChecksSteps" : {
       "title" : "하드웨어 및 소프트웨어 점검",
@@ -5446,6 +5459,7 @@
     "warnDelegation" : "투표권 위임은 검증인으로부터 어떠한 보상도 보장하지 않습니다.",
     "to" : "to",
     "from" : "from",
+    "yield" : "추정 수익",
     "forAnEstYield" : "추산 수익",
     "yieldPerYear" : "{{yield}}/년",
     "yieldInfos" : "다음에 의해 수익율이 제공됨:",
@@ -5573,6 +5587,7 @@
     "cta" : "계속"
   },
   "exchange" : {
+    "count" : "+ {{count}} 이상",
     "buy" : {
       "screenTitle" : "암호화폐 구매",
       "tabTitle" : "구매",
@@ -6026,22 +6041,10 @@
       "status" : {
         "new" : {
           "title" : "신규",
-          "desc" : "복구 문구 백업",
-          "0" : {
-            "title" : "수백만 명의 Ledger 사용자가 신뢰하는"
-          },
-          "1" : {
-            "title" : "귀하의 복구 문구는 귀하의 신원과 안전하게 연결됩니다"
-          },
-          "2" : {
-            "title" : "최첨단 암호화"
-          },
-          "3" : {
-            "title" : "3개의 탈중앙화된 부분으로 분할되어 복구 문구를 절대 도난당하지 않습니다"
-          },
+          "desc" : "비밀 복구 문구 없이 지갑에 대한 액세스를 복구하세요.",
           "actions" : {
-            "learnMore" : "자세히 알아보기",
-            "alreadySubscribed" : "이미 Protect에 가입하셨나요?"
+            "learnMore" : "그것이 제게 어떤 도움이 되나요?",
+            "alreadySubscribed" : "이미 가입하셨나요? <LinkAccount>내 계정 보기</LinkAccount>"
           }
         },
         "confirmIdentity" : {
@@ -6104,5 +6107,8 @@
     "title" : "뉴스피드",
     "poweredByCryptopanic" : "Cryptopanic 제공",
     "noPosts" : "현재 이용 가능한 게시물이 없습니다"
+  },
+  "deviceConnect" : {
+    "title" : "장치 연결"
   }
 }
