--- a/apps/ledger-live-desktop/static/i18n/ja/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ja/app.json
@@ -84,6 +84,7 @@
     "save" : "保存",
     "lock" : "ロック",
     "showMore" : "さらに表示",
+    "backToMatchingURL" : "Back to {{appName}}",
     "back" : "戻る",
     "adjustFees" : "手数料を調整する",
     "reset" : "リセット",
@@ -828,6 +829,10 @@
         "near" : {
           "title" : "ご存知でしたか？",
           "description" : "Ledgerは、お客様のバリデーターよりも低額のレートをご提供します。このプロセスには最大65時間かかる場合があります。"
+        },
+        "elrond" : {
+          "title" : "ご存知でしたか？",
+          "description" : "Ledgerは、お客様のバリデーターよりも低額のレートをご提供します。このプロセスには最大10日かかる場合があります。"
         }
       },
       "delegation" : {
@@ -849,6 +854,9 @@
         },
         "near" : {
           "description" : "Ledger by FigmentバリデーターでNEARをステーキングしましょう。Ledgerの妥協のないセキュリティで保護されるため、お客様のコインがお客様の元から離れることはありません。"
+        },
+        "elrond" : {
+          "description" : "Ledger by FigmentバリデーターでELRONDをステーキングします。Ledgerの妥協のないセキュリティで保護されるため、お客様のコインがお客様の元から離れることはありません。"
         }
       }
     }
@@ -2261,6 +2269,13 @@
     },
     "switchButton" : "{{language}}に切り替える",
     "no" : "不要"
+  },
+  "deviceRename" : {
+    "title" : "{{ productName }}の名前を変更する",
+    "chooseName" : "名前を選択",
+    "placeholder" : "TonyのStax",
+    "remainingCharacters" : "残り{{ remainingCharacters }}文字",
+    "renamed" : "{{ productName }}の名前が\n「{{ name }}」に変更されました "
   },
   "deviceLocalization" : {
     "language" : "言語",
@@ -3786,6 +3801,9 @@
       "catalogRampServerDesc" : "複数のトレードプロバイダーを切り替える",
       "enablePlatformDevTools" : "プラットフォーム開発ツールの有効化",
       "enablePlatformDevToolsDesc" : "プラットフォームアプリの開発ツールウィンドウ表示を有効化",
+      "customLockScreen" : "カスタムロック画面アセット",
+      "customLockScreenDesc" : "カスタムロック画面のグラフィックアセットをデバッグする",
+      "customLockScreenCTA" : "開始",
       "featureFlagsTitle" : "Ledger Liveで使用される定義済みの機能フラグ",
       "featureFlagsDesc" : "上書きされた値は、アプリが再起動されるとリセットされます。有効なJSON文字列のみが受け入れられます。",
       "featureFlagsEdit" : "編集",
@@ -5668,6 +5686,7 @@
   },
   "customImage" : {
     "title" : "カスタムロック画面",
+    "managerCTA" : "画面写真をロック",
     "steps" : {
       "choose" : {
         "stepLabel" : "画像を選択してください",
