fix(ledger-live-desktop): create custom warning component

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -3523,6 +3523,9 @@
       "providerLink": "Learn more about {{provider}}"
     }
   },
+  "vechain": {
+    "warning": "Graph not available for this token"
+  },
   "near": {
     "account": {
       "stakedBalance": "Staked balance",
