Changed Brazilian to Brazil

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -4078,7 +4078,7 @@
       "tr": "Turkish",
       "ja": "Japanese",
       "ko": "Korean",
-      "pt" : "Português (Brazilian)"
+      "pt" : "Português (Brasil)"
     }
   },
   "theme": {
