--- a/apps/ledger-live-desktop/static/i18n/pt-BR/app.json
+++ b/apps/ledger-live-desktop/static/i18n/pt-BR/app.json
@@ -4045,7 +4045,7 @@
       "tr" : "Turco",
       "ja" : "Japonês",
       "ko" : "Coreano",
-      "pt" : "Português (Brazilian)"
+      "pt" : "Português (Brasil)"
     }
   },
   "theme" : {
