--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -4045,7 +4045,7 @@
       "tr" : "Турецкий",
       "ja" : "Японский",
       "ko" : "Корейский",
-      "pt" : "Português (Brazilian)"
+      "pt" : "Português (Brasil)"
     }
   },
   "theme" : {
